[gd_scene load_steps=24 format=3 uid="uid://n1rylmkek0y2"]

[ext_resource type="Texture2D" uid="uid://dbcsarf1f8ri8" path="res://media/images/Sprite-0001.png" id="1_vr30i"]
[ext_resource type="Script" uid="uid://46l1g7brdvmh" path="res://scripts/enemies/enemySmall.gd" id="1_vyyob"]
[ext_resource type="PackedScene" uid="uid://gn8f0qyobb31" path="res://scenes/enemies/enemyBase.tscn" id="3_vyyob"]
[ext_resource type="Script" uid="uid://cj75hb5eg8x28" path="res://scripts/enemyFsm/enemyFsm.gd" id="4_hiun6"]
[ext_resource type="Script" uid="uid://oxf2eoodetjw" path="res://scripts/enemyFsm/enemyStates/idleEnemyState.gd" id="5_gpxyv"]
[ext_resource type="Script" uid="uid://d26wliexqd86a" path="res://scripts/enemyFsm/enemyStates/walkEnemyState.gd" id="6_2m2sk"]
[ext_resource type="Script" uid="uid://bkjlgohqmyvpx" path="res://scripts/enemyFsm/enemyStates/bounceEnemyState.gd" id="7_cg34n"]
[ext_resource type="Script" uid="uid://besnt1gmxk4sn" path="res://scripts/enemyFsm/enemyStates/dieEnemyState.gd" id="8_cg34n"]
[ext_resource type="Script" uid="uid://dxd6qya6d0lew" path="res://scripts/enemyFsm/enemyStates/airEnemyState.gd" id="9_3q7ab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrtym"]
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_opu8p"]
atlas = ExtResource("1_vr30i")
region = Rect2(368, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjrp5"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q7ab"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fegxs"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vrqi"]
atlas = ExtResource("1_vr30i")
region = Rect2(368, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkuqg"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi5al"]
atlas = ExtResource("1_vr30i")
region = Rect2(400, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgyl6"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e4l5"]
atlas = ExtResource("1_vr30i")
region = Rect2(368, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa7ie"]
atlas = ExtResource("1_vr30i")
region = Rect2(384, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l8bg"]
atlas = ExtResource("1_vr30i")
region = Rect2(368, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2su6a"]
atlas = ExtResource("1_vr30i")
region = Rect2(352, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5uwq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opu8p")
}],
"loop": true,
"name": &"jelly_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjrp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opu8p")
}],
"loop": true,
"name": &"jelly_walk",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q7ab")
}],
"loop": true,
"name": &"scorp_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fegxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vrqi")
}],
"loop": true,
"name": &"scorp_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkuqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi5al")
}],
"loop": true,
"name": &"skel_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgyl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e4l5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgyl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa7ie")
}],
"loop": true,
"name": &"skel_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8bg")
}],
"loop": true,
"name": &"squid_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2su6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l8bg")
}],
"loop": true,
"name": &"squid_walk",
"speed": 3.0
}]

[node name="EnemySmall" type="CharacterBody2D" groups=["enemy-small"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_vyyob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_lrtym")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_p5uwq")
animation = &"skel_walk"
frame = 1
frame_progress = 0.317318

[node name="FrontRayCast2D" type="RayCast2D" parent="."]
position = Vector2(13, 9)
target_position = Vector2(9, 0)

[node name="GroundRayCast2D" type="RayCast2D" parent="."]
position = Vector2(17, 14)
target_position = Vector2(0, 5)
collision_mask = 2
hit_from_inside = true

[node name="BulletSpawnerMarker2D" type="Marker2D" parent="."]
position = Vector2(8, 8)

[node name="EnemyBase" parent="." instance=ExtResource("3_vyyob")]
script = null

[node name="FlipTimer" type="Timer" parent="."]

[node name="HurtTimer" type="Timer" parent="."]

[node name="enemyFsm" type="Node" parent="."]
script = ExtResource("4_hiun6")

[node name="idleEnemyState" type="Node" parent="enemyFsm"]
script = ExtResource("5_gpxyv")

[node name="walkEnemyState" type="Node" parent="enemyFsm"]
script = ExtResource("6_2m2sk")

[node name="bounceEnemyState" type="Node" parent="enemyFsm"]
script = ExtResource("7_cg34n")

[node name="dieEnemyState" type="Node" parent="enemyFsm"]
script = ExtResource("8_cg34n")

[node name="airEnemyState" type="Node" parent="enemyFsm"]
script = ExtResource("9_3q7ab")

[connection signal="timeout" from="FlipTimer" to="." method="_on_flip_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
